--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HandyWheelAndroid</string>
+    <string name="restart_app">Restart App</string>
+    <string name="select">Select</string>
+    <string name="start">Start</string>
 </resources>
